@@ -1,3 +1,7 @@
+1999-08-12  Gary Houston  <ghouston@easynet.co.uk>
+
+	* tests/ports.test: lseek -> seek.
+
 1999-08-04  Gary Houston  <ghouston@easynet.co.uk>
 
 	* tests/ports.test: tests for buffered and unbuffered input/output
